basic skeleton of persistent menu

--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -1,7 +1,7 @@
 <div class='lesson-wrapper'>
 
   <div id="lesson-sidebar">
-    <div id='lesson-map-sidebar'>
+    <div id='lesson-map-sidebar' hidden>
       <p id='lesson-map'>Lesson Map</p>
     </div>
   </div>
