--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -210,7 +210,7 @@ a.modal-insp:hover {
     p {
       font-size: 14px;
       margin-left: 20px;
-      // display: flex;
+      display: flex;
       margin-bottom: -15px;
 
       p {
@@ -234,6 +234,6 @@ a.modal-insp:hover {
 }
 
 .atTop {
-  padding-left: 5px;
+  padding-left: 2px;
   border-left: 2px solid gray;
 }
