--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -3,6 +3,7 @@
   <div id="lesson-sidebar">
     <div id='lesson-map-sidebar' hidden>
       <p id='lesson-map'>Lesson Map</p>
+      <p id='backToTop'><a href="#top">Back To Top</a></p>
     </div>
   </div>
 
