--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -19,7 +19,7 @@
     form: f,
     entity: @project,
     attribute: :overview,
-    label: "Project Overview PDF" %>
+    label: "Project Lesson Packet" %>
 
   <%= render "shared/form_attachment",
     form: f,
