--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -12,7 +12,7 @@
             <%= image_tag @lesson.example_image.url(:medium) %>
           </div>
           <div class="superhero-quote" id='synopsis'>
-            <%= @lesson.synopsis %>
+            <%= markdown @lesson.synopsis %>
           </div>
         </div>
       </div>
@@ -91,28 +91,36 @@
         </div>
       <% end %>
 
-      <h2 id='introduction-video' class="lesson-heading anchor">
-        <% if @lesson.intro_time.present? %>
-          <%= @lesson.intro_time %>, Introduction video</h2>
-        <% else %>
-          5m, Introduction video</h2>
-        <% end %>
-
       <% if @lesson.video_uri.present? %>
-      <h3 id='watch'>watch the video introduction</h3>
+        <h2 id='introduction-video' class="lesson-heading anchor">
+          <% if @lesson.intro_time.present? %>
+            <%= @lesson.intro_time %>, Introduction video</h2>
+          <% else %>
+            5m, Introduction video</h2>
+          <% end %>
+            <h3 id='watch'>watch the video introduction</h3>
 
-      <div>
-        <blockquote>
-          <div class="frame frame--16x9">
-            <iframe src="<%= @lesson.video_uri %>"
-              frameborder="0"
-              webkitallowfullscreen
-              mozallowfullscreen
-              allowfullscreen>
-            </iframe>
+          <div>
+            <blockquote>
+              <div class="frame frame--16x9">
+                <iframe src="https://player.vimeo.com/video/<%= @lesson.video_uri %>"
+                  frameborder="0"
+                  webkitallowfullscreen
+                  mozallowfullscreen
+                  allowfullscreen>
+                </iframe>
+              </div>
+            </blockquote>
           </div>
-        </blockquote>
-      </div>
+      <% else %>
+      <h2 id='introduction' class="lesson-heading anchor">
+        <% if @lesson.intro_time.present? %>
+          <%= @lesson.intro_time %>, Instructions</h2>
+        <% else %>
+          5m, Instructions</h2>
+        <% end %>
+        <p><%= markdown @lesson.instructions %></p>
+      <% end %>
 
       <div>
         <h3>check for understanding</h3>
@@ -147,8 +155,8 @@
       <% else %>
           <h3><%= @lesson.worktime_focus %></h3>
           <p><%= @lesson.worktime %></p>
-        <% end %>
       <% end %>
+
 
       <% if @lesson.additional_worktime.present? %>
         <div class='anchor' id='additional-worktime'>
