--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -31,6 +31,13 @@
 
   <h1>Setup At A Glance</h1>
   <div>
+    <h2 id='project-lesson-plan'>Lesson Plan</h2>
+    <% if @project.overview.present? %>
+      <p><%= link_to @project.overview_file_name, @project.overview.url %></p>
+    <% else %>
+      <p><%= "N/A" %></p>
+    <% end %>
+
     <h2 id='project-materials'>materials</h2>
     <p><%= @project.materials %></p>
     <div class="project-indent">
@@ -98,14 +105,21 @@
       </div>
     <% end %>
 
-    <h2 id='project-art-elements'>art elements</h2>
-    <p><%= @project.art_elements %></p>
+    <a><div class='collapsible' id='project-foundations'>
+      <div>
+        <h2 class="collapsible-heading">foundations<span><h2 class="collapsible-plus">+</h2></span></h2>
+      </div>
+    </div></a>
+    <div class='project-foundations-collapsed collapsed' hidden>
+      <h2 id='project-art-elements'>art elements</h2>
+      <p><%= @project.art_elements %></p>
 
-    <h2 id='project-art-princples'>art principles</h2>
-    <p><%= @project.art_principles %></p>
+      <h2 id='project-art-princples'>art principles</h2>
+      <p><%= @project.art_principles %></p>
 
-    <h2 id='project-cross-curricular'>cross curricular</h2>
-    <p><%= @project.cross_curricular %></p>
+      <h2 id='project-cross-curricular'>cross curricular</h2>
+      <p><%= @project.cross_curricular %></p>
+    </div>
   </div>
 
 </div>
