--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -103,7 +103,7 @@
           <div>
             <blockquote>
               <div class="frame frame--16x9">
-                <iframe src="https://player.vimeo.com/video/<%= @lesson.video_uri %>"
+                <iframe src="<%= @lesson.video_uri %>"
                   frameborder="0"
                   webkitallowfullscreen
                   mozallowfullscreen
