--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -1,13 +1,13 @@
 <div class='lesson-wrapper'>
 
-  <div id="lesson-sidebar">
-    <div id='lesson-map-sidebar' hidden>
-      <p id='lesson-map'>Lesson Map</p>
-      <p id='backToTop'><a href="#top">Back To Top</a></p>
+    <div id="lesson-sidebar">
+      <blockquote id='lesson-map-sidebar' hidden>
+        <p id='lesson-map'>Lesson <%= @lesson.order + 1 %></p>
+        <p id='backToTop'><a href="#top">Back To Top</a></p>
+      </blockquote>
     </div>
-  </div>
 
-  <div id='lesson-main'>
+    <div id='lesson-main'>
 
     <div>
       <h1 class='lesson-title'><%= @lesson.title %></h1>
@@ -21,7 +21,7 @@
             <%= image_tag @lesson.example_image.url(:medium) %>
           </div>
           <div class="superhero-quote" id='synopsis'>
-            <%= @lesson.synopsis %>
+            <%= markdown @lesson.synopsis %>
           </div>
         </div>
       </div>
@@ -36,7 +36,7 @@
     <div id="overview">
       <h1 class="overview-head heading anchor">Overview</h1>
       <h2 id='objective' class="overview-heading anchor">objective</h2>
-      <p><%= @lesson.objective %></p>
+      <p><%= markdown @lesson.objective %></p>
       <h2 id='setup' class="overview-heading anchor">Setup</h2>
       <p><%= @lesson.setting_up %></p>
       <h2 id='materials' class="overview-heading anchor">Materials</h2>
@@ -79,7 +79,7 @@
       <% if @lesson.inspiration_image.exists?  %>
         <h2 id='inspiration-image' class="lesson-heading anchor">10m, inspiration image</h2>
         <blockquote>
-          <a data-toggle="modal" data-modal-id="modal-insp" class="modal-insp"><div class="insp-img-wrapper"><img src='<%= @lesson.inspiration_image.url(:large) %>' /><span class="glyphicon glyphicon-zoom-in"></span></div></a>
+          <a data-toggle="modal" data-modal-id="modal-insp" class="modal-insp"><div class="insp-img-wrapper"><img src='<%= @lesson.inspiration_image.url(:large) %>' /><span class="insp-img-glyph">⚲</span></div></a>
           <p id="inspiration-image-title"><%= @lesson.inspiration_image_title %></p>
           <p><%= @lesson.inspiration_image_description %></p>
         </blockquote>
@@ -100,28 +100,36 @@
         </div>
       <% end %>
 
-      <h2 id='introduction-video' class="lesson-heading anchor">
-        <% if @lesson.intro_time.present? %>
-          <%= @lesson.intro_time %>, Introduction video</h2>
-        <% else %>
-          5m, Introduction video</h2>
-        <% end %>
-
       <% if @lesson.video_uri.present? %>
-      <h3 id='watch'>watch the video introduction</h3>
+        <h2 id='introduction-video' class="lesson-heading anchor">
+          <% if @lesson.intro_time.present? %>
+            <%= @lesson.intro_time %>, Introduction video</h2>
+          <% else %>
+            5m, Introduction video</h2>
+          <% end %>
+            <h3 id='watch'>watch the video introduction</h3>
 
-      <div>
-        <blockquote>
-          <div class="frame frame--16x9">
-            <iframe src="<%= @lesson.video_uri %>"
-              frameborder="0"
-              webkitallowfullscreen
-              mozallowfullscreen
-              allowfullscreen>
-            </iframe>
+          <div>
+            <blockquote>
+              <div class="frame frame--16x9">
+                <iframe src="<%= @lesson.video_uri %>"
+                  frameborder="0"
+                  webkitallowfullscreen
+                  mozallowfullscreen
+                  allowfullscreen>
+                </iframe>
+              </div>
+            </blockquote>
           </div>
-        </blockquote>
-      </div>
+      <% else %>
+      <h2 id='introduction' class="lesson-heading anchor">
+        <% if @lesson.intro_time.present? %>
+          <%= @lesson.intro_time %>, Instructions</h2>
+        <% else %>
+          5m, Instructions</h2>
+        <% end %>
+        <p><%= markdown @lesson.instructions %></p>
+      <% end %>
 
       <div>
         <h3>check for understanding</h3>
@@ -156,8 +164,8 @@
       <% else %>
           <h3><%= @lesson.worktime_focus %></h3>
           <p><%= @lesson.worktime %></p>
-        <% end %>
       <% end %>
+
 
       <% if @lesson.additional_worktime.present? %>
         <div class='anchor' id='additional-worktime'>
@@ -168,19 +176,22 @@
 
       <h2 class="lesson-heading anchor" id='clean-up-presentations'>5-10m, clean-up/presentations</h2>
       <div>
-        <h3>students discuss the artistic decisions that they made</h3>
-        <p>Use 'what, how, and why' and then take comments or questions.</p>
-        <p>Depending on the teacher’s style of classroom management, it might be helpful to only choose and train a few kids to clean. The rest of the class can be busy with the presentation. Make sure to train these helpers well in advance so that you aren’t left with a messy room.</p>
-        <p>Clean-up times will vary with materials; get to know your class and allow 5-10 minutes depending on how efficient they are and whether or not the material was messy.</p>
-        <p>Choose presenting student artists in advance and let them know during their work time so that they are prepared.</p>
-        <p>Sharing should work as follows:</p>
-          <ul class="sharing">
-            <li>Student stands by their work. A teacher should hold it, or place it on an easel.</li>
-            <li>The student presents their work, answering What they made, How they made it, and Why they made the decisions that they did. When they are done they ask, “Any comments or questions?” and can take responses from the audience.</li>
-            <li>A note on responses: it is o.k. if an audience member questions or wants clarification from the artist. It is also o.k. if an audience member makes suggestions. But it must be done in a kind, thoughtful, and respectful way.</li>
-            <li>Always end the conversation by asking the class to give the artist a compliment.</li>
-          </ul>
-        <p><%= @lesson.clean_up %></p>
+        <% if @lesson.clean_up.present? %>
+          <p><%= markdown @lesson.clean_up %></p>
+        <% else %>
+          <h3>students discuss the artistic decisions that they made</h3>
+          <p>Use 'what, how, and why' and then take comments or questions.</p>
+          <p>Depending on the teacher’s style of classroom management, it might be helpful to only choose and train a few kids to clean. The rest of the class can be busy with the presentation. Make sure to train these helpers well in advance so that you aren’t left with a messy room.</p>
+          <p>Clean-up times will vary with materials; get to know your class and allow 5-10 minutes depending on how efficient they are and whether or not the material was messy.</p>
+          <p>Choose presenting student artists in advance and let them know during their work time so that they are prepared.</p>
+          <p>Sharing should work as follows:</p>
+            <ul class="sharing">
+              <li>Student stands by their work. A teacher should hold it, or place it on an easel.</li>
+              <li>The student presents their work, answering What they made, How they made it, and Why they made the decisions that they did. When they are done they ask, “Any comments or questions?” and can take responses from the audience.</li>
+              <li>A note on responses: it is o.k. if an audience member questions or wants clarification from the artist. It is also o.k. if an audience member makes suggestions. But it must be done in a kind, thoughtful, and respectful way.</li>
+              <li>Always end the conversation by asking the class to give the artist a compliment.</li>
+            </ul>
+          <% end %>
       </div>
     </div>
 
@@ -191,7 +202,7 @@
 
       <div id='anticipated-problems'>
         <h2 class="extension-heading anchor">anticipated problems</h2>
-        <p><%= @lesson.anticipated_problems %></p>
+        <p><%= markdown @lesson.anticipated_problems %></p>
       </div>
 
       <div id='early-finishers'>
