--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -54,7 +54,7 @@
     form: f,
     entity: @lesson,
     attribute: :inspiration_image,
-    label: "Header Image" %>
+    label: "Inspiration Image" %>
 
   <div class="field">
     <%= f.label :synopsis %>
