--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -25,7 +25,7 @@
     form: f,
     entity: @project,
     attribute: :inspiration_image,
-    label: "Inspiration Image" %>
+    label: "Header Image" %>
 
   <%= render "shared/form_attachment",
     form: f,
