--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -67,10 +67,9 @@
   font-size: 16px;
   color: gray;
   margin-bottom: 20px;
-  // max-width: 600px;
 
   img {
-    margin: 0 0 0 40px;
+    margin: 0 0 10px -40px;
   }
 }
 
@@ -122,7 +121,6 @@ body {
 
 .hero-text {
   font-size: 28px;
-  /*letter-spacing: 1px;*/
   color: #888;
 }
 
