added changes per Tempest

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -189,6 +189,26 @@
   </div>
 
   <div class="field">
+    <%= f.label :additional_independent_worktime %>
+    <%= f.text_field :additional_independent_worktime %>
+  </div>
+
+  <div class="field">
+    <%= f.label :additional_group_worktime %>
+    <%= f.text_field :additional_group_worktime %>
+  </div>
+
+  <div class="field">
+    <%= f.label :additional_worktime_focus %>
+    <%= f.text_field :additional_worktime_focus %>
+  </div>
+
+  <div class="field">
+    <%= f.label :additional_worktime_time %>
+    <%= f.text_field :additional_worktime_time %>
+  </div>
+
+  <div class="field">
     <%= f.label :additional_worktime %>
     <%= f.text_field :additional_worktime %>
   </div>
