--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -69,7 +69,8 @@
   margin-bottom: 20px;
 
   img {
-    margin: 0 0 20px -40px;
+    // margin: 0 0 20px -40px; will change to this when persistent menu is added to projects
+    margin: 0 0 60px -40px;
   }
 }
 
