Draft-mode form fix

--- a/app/views/shared/_form_status.html.erb
+++ b/app/views/shared/_form_status.html.erb
@@ -1,4 +1,4 @@
 <div class="form-group">
   <%= form.label :status, 'Status' %>
-  <%= form.input :status, as: :select, collection: entity.class.statuses.keys.to_a %>
+  <%= form.select :status, entity.class.statuses.keys %>
 </div>
