styling changes to persistent menu

--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -2,8 +2,7 @@
 
     <div id="lesson-sidebar">
       <div id='lesson-map-sidebar' hidden>
-        <p id='lesson-map'>Lesson <%= @lesson.order + 1 %></p>
-        <p id='backToTop'><a href="#top">Back To Top</a></p>
+        <a href="#top" id="lesson-map-link"><strong id='lesson-map'>Lesson <%= @lesson.order + 1 %></strong></a>
       </div>
     </div>
 
