--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -215,6 +215,7 @@ a.modal-insp:hover {
     #lesson-map {
       // margin-left: 15px;
       margin-left: -60px;
+      line-height: 1.75;
       // margin-left: 5px;
     }
 
