fixed persistent menu

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -235,9 +235,9 @@ a.modal-insp:hover {
 
           &:hover {
             color: #8DC5E6;
-            padding-left: 2px;
-            margin-left: -3px;
-            border-left: 1px solid gray;
+            padding-left: 4px;
+            margin-left: -6px;
+            border-left: 2px solid #8DC5E6;
           }
         }
 
