--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,15 @@
-<% content_for (:hero_content) { image_tag 'doodle_white.png', size: "350"} %>
+<% content_for (:hero_content) { image_tag 'doodle_white.png', size: "350" } %>
 <% content_for :hero_content do %>
  <h2 style="margin-top: -50px;"> Students aren't carbon copies.</h2>
  <h2 style="margin-top: -10px;"> Why should their art be? </h2>
 <%end %>
 
 <div class="homepage">
+ <section class="homepage-section">
+   <div class='homepage-content'>
+     <h2 class='high-q'>High-quality arts education for all</h2>
+ </div>
+ </section>
  <section class="homepage-section">
     <div class="homepage-content">
       <div class="frame frame--16x9" style="margin: 50px 0">
