--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -260,8 +260,19 @@ a.modal-insp:hover {
   border-left: 2px solid gray;
 }
 
-@media (max-width: 640px) {
+// @media (max-width: 640px) {
+//   #lesson-sidebar {
+//     display: none;
+//   }
+// }
+
+@media screen and (max-width: 600px) {
   #lesson-sidebar {
+    visibility: hidden;
+    clear: both;
+    float: left;
+    // margin: 10px auto 5px 20px;
+    // width: 28%;
     display: none;
   }
 }
