--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -266,13 +266,10 @@ a.modal-insp:hover {
 //   }
 // }
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px)
+and (-webkit-min-device-pixel-ratio: 2) {
   #lesson-sidebar {
     visibility: hidden;
-    clear: both;
-    float: left;
-    // margin: 10px auto 5px 20px;
-    // width: 28%;
     display: none;
   }
 }
