fixing nav bar for mobile

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -268,4 +268,13 @@ a.modal-insp:hover {
     visibility: hidden;
     display: none;
   }
+
+  .doodles-nav {
+    .brand {
+      margin-left: 0;
+    }
+    .doodles-nav {
+      margin-left: 50px;
+    }
+  }
 }
