--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -271,7 +271,7 @@ a.modal-insp:hover {
 
   .doodles-nav {
     .brand {
-      margin-left: 0;
+      margin-left: 20px;
     }
     .doodles-nav {
       margin-left: 50px;
