--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -274,7 +274,10 @@ a.modal-insp:hover {
       margin-left: 20px;
     }
     .doodles-nav {
-      margin-left: 20px;
+      margin-left: 50px;
+    }
+    .nav-menu {
+      margin-left: 60px;
     }
   }
 }
